# rusty-rocks

./: .env  Cargo.toml
migrations/2020-02-06-040726_create_users/: down.sql  up.sql
migrations/2020-02-09-213959_add_user_name/: down.sql  up.sql
src/: lib.rs  main.rs  models.rs  schema.rs
