[package]
name = "rusty_rocks"
version = "0.1.0"
authors = ["kevin <kdelamo94@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "2"
actix-rt = "1"
actix = "0.9"
diesel = { version = "1.0.0", features = ["postgres"]}
dotenv = "0.9.0"
sha2 = "0.8.1"
base64 = "0.11.0"
serde = "1.0.104"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"]}
actix-cors = "0.2.0"